--- a/plugin.xml
+++ b/plugin.xml
@@ -26,15 +26,24 @@
             <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
         </config-file>
         <config-file parent="/manifest/application" target="AndroidManifest.xml">
-            <!-- Ping++ sdk -->
-            <activity android:configChanges="orientation|screenSize" android:launchMode="singleTop" android:name="com.pingplusplus.android.PaymentActivity" android:theme="@android:style/Theme.Translucent.NoTitleBar"/>
-            <!-- 微信支付 sdk ，也是 Ping++ sdk 调用入口 -->
-            <activity-alias android:exported="true" android:name=".wxapi.WXPayEntryActivity" android:targetActivity="com.pingplusplus.android.PaymentActivity"/>
-            <!-- 支付宝 sdk -->
-            <activity android:configChanges="orientation|keyboardHidden|navigation" android:exported="false" android:name="com.alipay.sdk.app.H5PayActivity" android:screenOrientation="behind"/>
-            <activity android:configChanges="orientation|keyboardHidden|navigation" android:exported="false" android:name="com.alipay.sdk.auth.AuthActivity" android:screenOrientation="behind"/>
-            <!-- 银联支付 sdk -->
-            <activity android:name="com.unionpay.uppay.PayActivity"/>
+            <activity
+                    android:name="com.pingplusplus.android.PaymentActivity"
+                    android:launchMode="singleTop"
+                    android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+            <activity-alias
+                    android:name=".wxapi.WXPayEntryActivity"
+                    android:exported="true"
+                    android:targetActivity="com.pingplusplus.android.PaymentActivity" />
+            <activity
+                    android:name="com.alipay.sdk.app.H5PayActivity"
+                    android:configChanges="orientation|keyboardHidden|navigation"
+                    android:exported="false"
+                    android:screenOrientation="behind" />
+            <activity
+                    android:name="com.alipay.sdk.auth.AuthActivity"
+                    android:configChanges="orientation|keyboardHidden|navigation"
+                    android:exported="false"
+                    android:screenOrientation="behind" />
         </config-file>
         <!-- libs -->
         <source-file src="libs/android/alipaySDK-20150818.jar" target-dir="libs"/>
@@ -51,4 +60,5 @@
         <!-- src -->
         <source-file src="src/android/PingppPlugin.java" target-dir="src/com/myideaway/cordova/pingpp"/>
     </platform>
+
 </plugin>
