--- a/plugin.xml
+++ b/plugin.xml
@@ -18,14 +18,14 @@
                 <param name="android-package" value="com.myideaway.cordova.pingpp.PingppPlugin"/>
             </feature>
         </config-file>
-        <config-file parent="/manifest" target="AndroidManifest.xml">
+        <config-file parent="/*" target="AndroidManifest.xml">
             <uses-permission android:name="android.permission.INTERNET"/>
             <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
             <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
             <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
             <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
         </config-file>
-        <config-file parent="/manifest/application" target="AndroidManifest.xml">
+        <config-file parent="/application" target="AndroidManifest.xml">
             <activity
                     android:name="com.pingplusplus.android.PaymentActivity"
                     android:launchMode="singleTop"
