--- a/plugin.xml
+++ b/plugin.xml
@@ -24,26 +24,20 @@
             <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
             <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
             <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+            <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+            <uses-permission android:name="android.permission.WRITE_SETTINGS"/>
+            <uses-permission android:name="android.permission.SEND_SMS"/>
+            <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+            <uses-permission android:name="android.permission.READ_SMS"/>
         </config-file>
         <config-file parent="/manifest/application" target="AndroidManifest.xml">
-            <activity
-                    android:name="com.pingplusplus.android.PaymentActivity"
-                    android:launchMode="singleTop"
-                    android:theme="@android:style/Theme.Translucent.NoTitleBar" />
-            <activity-alias
-                    android:name=".wxapi.WXPayEntryActivity"
-                    android:exported="true"
-                    android:targetActivity="com.pingplusplus.android.PaymentActivity" />
-            <activity
-                    android:name="com.alipay.sdk.app.H5PayActivity"
-                    android:configChanges="orientation|keyboardHidden|navigation"
-                    android:exported="false"
-                    android:screenOrientation="behind" />
-            <activity
-                    android:name="com.alipay.sdk.auth.AuthActivity"
-                    android:configChanges="orientation|keyboardHidden|navigation"
-                    android:exported="false"
-                    android:screenOrientation="behind" />
+            <!-- Ping++ SDK 注册 -->
+            <activity android:configChanges="orientation|screenSize" android:launchMode="singleTop" android:name="com.pingplusplus.android.PaymentActivity" android:theme="@android:style/Theme.Translucent.NoTitleBar"/>
+            <!-- 微信支付注册 -->
+            <activity-alias android:exported="true" android:name=".wxapi.WXPayEntryActivity" android:targetActivity="com.pingplusplus.android.PaymentActivity"/>
+            <!-- 支付宝注册 -->
+            <activity android:configChanges="orientation|keyboardHidden|navigation" android:exported="false" android:name="com.alipay.sdk.app.H5PayActivity" android:screenOrientation="behind"/>
+            <activity android:configChanges="orientation|keyboardHidden|navigation" android:exported="false" android:name="com.alipay.sdk.auth.AuthActivity" android:screenOrientation="behind"/>
         </config-file>
         <!-- libs -->
         <source-file src="libs/android/alipaySDK-20150818.jar" target-dir="libs"/>
@@ -60,5 +54,4 @@
         <!-- src -->
         <source-file src="src/android/PingppPlugin.java" target-dir="src/com/myideaway/cordova/pingpp"/>
     </platform>
-
 </plugin>
